--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
+    "mime": "^4.0.6",
     "mime-types": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
