--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+dist/
+build/
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
